syntax = "proto3";

option java_package = "com.caucapstone.app";
option java_multiple_files = true;

enum FilterType {
  FILTER_NONE = 0;
  FILTER_SPECIFIC = 1;
  FILTER_DALTONIZED = 2;
  FILTER_STRIPE = 3;
}

enum ColorBlindType {
    COLOR_BLIND_PROTANOPIA = 0;
    COLOR_BLIND_DEUTERANOPIA = 1;
    COLOR_BLIND_TRITANOPI = 2;
}

message SettingProto {
  bool docMode = 1;
  bool removeGlare = 2;
  int32 colorSensitivity = 3;
  FilterType defaultFilterType = 4;
}